LANGUAGES =			\
	ada.lang		\
	automake.lang		\
	c.lang			\
	changelog.lang		\
	cpp.lang		\
	csharp.lang		\
	css.lang		\
	def.lang		\
	desktop.lang		\
	diff.lang		\
	fortran.lang		\
	gtkrc.lang		\
	haskell.lang		\
	html.lang		\
	idl.lang		\
	ini.lang		\
	java.lang		\
	javascript.lang		\
	latex.lang		\
	lua.lang		\
	makefile.lang		\
	msil.lang		\
	nemerle.lang		\
	octave.lang		\
	pascal.lang		\
	perl.lang		\
	php.lang		\
	po.lang			\
	python.lang		\
	R.lang			\
	ruby.lang		\
	scheme.lang		\
	sh.lang			\
	sql.lang		\
	tcl.lang		\
	texinfo.lang		\
	vbnet.lang		\
	verilog.lang		\
	vhdl.lang		\
	xml.lang		\
	yacc.lang

STYLES =			\
	gvim.styles

languagesdir = $(datadir)/gtksourceview-2.0/language-specs
languages_DATA = $(LANGUAGES) language2.rng check.sh convert.py language.dtd

stylesdir = $(datadir)/gtksourceview-2.0/styles
styles_DATA = $(STYLES) styles.rng

EXTRA_DIST = $(languages_DATA) $(styles_DATA)
